# bookwork

./: .gitignore  README.md
beginning_c++_though_game_programming/: README.md
beginning_c++_though_game_programming/abstract_creature/: CMakeLists.txt
beginning_c++_though_game_programming/abstract_creature/abstract_creature/: CMakeLists.txt  abstract_creature.cpp
beginning_c++_though_game_programming/blackjack/: CMakeLists.txt
beginning_c++_though_game_programming/constructor_critter/: CMakeLists.txt
beginning_c++_though_game_programming/counter/: CMakeLists.txt
beginning_c++_though_game_programming/critter_caretaker/: CMakeLists.txt
beginning_c++_though_game_programming/critter_caretaker/critter_caretaker/: CMakeLists.txt  critter_caretaker.cpp
beginning_c++_though_game_programming/critter_farm/: CMakeLists.txt
beginning_c++_though_game_programming/designers_network/: CMakeLists.txt
beginning_c++_though_game_programming/designers_network/designers_network/: CMakeLists.txt  designers_network.cpp
beginning_c++_though_game_programming/die_roller/: CMakeLists.txt
beginning_c++_though_game_programming/expensive_calculator/: CMakeLists.txt
beginning_c++_though_game_programming/expensive_calculator/expensive_calculator/: CMakeLists.txt  expensive_calculator.cpp
beginning_c++_though_game_programming/finicky_counter/: CMakeLists.txt
beginning_c++_though_game_programming/friend_critter/: CMakeLists.txt
beginning_c++_though_game_programming/game_lobby/: CMakeLists.txt
beginning_c++_though_game_programming/game_over/: CMakeLists.txt
beginning_c++_though_game_programming/game_stats/: CMakeLists.txt
beginning_c++_though_game_programming/game_stats2/: CMakeLists.txt
beginning_c++_though_game_programming/game_stats2/game_stats2/: CMakeLists.txt  game_stats2.cpp
beginning_c++_though_game_programming/game_stats3/: CMakeLists.txt
beginning_c++_though_game_programming/give_me_a_number/: CMakeLists.txt
beginning_c++_though_game_programming/give_me_a_number/give_me_a_number/: CMakeLists.txt  give_me_a_number.cpp
beginning_c++_though_game_programming/global_reach/: CMakeLists.txt
beginning_c++_though_game_programming/guess_my_number/: CMakeLists.txt
beginning_c++_though_game_programming/hangman/: CMakeLists.txt
beginning_c++_though_game_programming/heap/: CMakeLists.txt
beginning_c++_though_game_programming/heap_data_member/: CMakeLists.txt
beginning_c++_though_game_programming/heap_data_member/heap_data_member/: CMakeLists.txt  heap_data_member.cpp
beginning_c++_though_game_programming/heros_inventory/: CMakeLists.txt
beginning_c++_though_game_programming/heros_inventory2/: CMakeLists.txt
beginning_c++_though_game_programming/heros_inventory2/heros_inventory2/: CMakeLists.txt  heros_inventory2.cpp
beginning_c++_though_game_programming/heros_inventory3/: CMakeLists.txt
beginning_c++_though_game_programming/heros_inventory3/heros_inventory3/: CMakeLists.txt  heros_inventory3.cpp
beginning_c++_though_game_programming/high_scores/: CMakeLists.txt
beginning_c++_though_game_programming/inventory_displayer/: CMakeLists.txt
beginning_c++_though_game_programming/inventory_displayer/inventory_displayer/: CMakeLists.txt  inventory_displayer.cpp
beginning_c++_though_game_programming/inventory_pointer/: CMakeLists.txt
beginning_c++_though_game_programming/inventory_pointer/inventory_pointer/: CMakeLists.txt  inventory_pointer.cpp
beginning_c++_though_game_programming/inventory_referencer/: CMakeLists.txt
beginning_c++_though_game_programming/inventory_referencer/inventory_referencer/: CMakeLists.txt  inventory_referencer.cpp
beginning_c++_though_game_programming/lost_fortune/: CMakeLists.txt
beginning_c++_though_game_programming/mad_lib/: CMakeLists.txt
beginning_c++_though_game_programming/menu_chooser/: CMakeLists.txt
beginning_c++_though_game_programming/polymorphic_bad_guy/polymorphic_bad_guy/: CMakeLists.txt  polymorphic_bad_guy.cpp
beginning_c++_though_game_programming/score_rater3/score_rater3/: CMakeLists.txt  score_rater3.cpp
beginning_c++_though_game_programming/tic-tac-toe_board/tic-tac-toe_board/: CMakeLists.txt  tic-tac-toe_board.cpp
c#_design_patterns/: README.md
c#_players_guide/: README.md
c_interfaces_and_implementations/: .gitignore  CMakeLists.txt  README.md
c_interfaces_and_implementations/test/: CMakeLists.txt  arena_test.c  arith_test.c  atom_test.c  mem_test.c  memchk_leak_test.c  memchk_test.c  stack_test.c  test  test.c  test_util.c  test_util.h
core_java/: BigIntegerTest.java  CalendarTest.java  ConstructorTest.java  EnumTest.java  ImageViewer.java  README.md  ReflectionTest.java
developing_games_in_java/: LICENSE  README.md
grokking_deep_learning/: README.md
handson_machine_learning/: README.md  chapter02.ipynb
head_first_c/: README.md
head_first_design_patterns/: README.md
head_first_java/: README.md
head_first_ooad/: README.md
head_first_python/: README.md
learn_c_hard_way/: Makefile  README.md  ex1.c  ex2.1.mak  ex7.c  ex8.c  ex9.c
learn_python3_hard_way/: README.md  README.rst  ex01.md  ex04.md  ex05.py  ex06.py  ex07.py  ex08.md  ex08.py  ex09.md  ex12.py  ex13.md  exercise1.ipynb
learning_csharp_by_games_unity/: README.md
learning_processing/: README.md
linux_programming/: CMakeLists.txt  README.md
linux_programming/src/: curses_colors.c  curses_hello.c  curses_keys.c  curses_moveadd.c
making_games_with_python_pygame/: README.md  catanimation.py  drawing.py  fonttest.py  hello.py
math_adventures_with_python/: README.md
nature_of_code/: README.md
obfuscated_c/: README.md
practice_of_programming/: CMakeLists.txt  README.md
practice_of_programming/chapter_02/: CMakeLists.txt  README.md  example_array1.c  example_array2.c  example_array3.c  example_hashtable.c  example_list.c  example_tree.c  html_chars.h  html_chars.txt
practice_of_programming/chapter_09/: CMakeLists.txt  README.md  calc.c  expr.c  expr_test.c  grep.c  pack_unpack.c  pack_unpack.h  pack_unpack_example.c  pack_unpack_test.c  vm3.c
unity_game_development_24hours/: README.md
(+527 files in other folders)
