# CMakeList.txt : CMake project for abstract_creature, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (abstract_creature "abstract_creature.cpp")

# TODO: Add tests and install targets if needed.
