# CMakeList.txt : CMake project for critter_caretaker, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (critter_caretaker "critter_caretaker.cpp")

# TODO: Add tests and install targets if needed.
