# CMakeList.txt : CMake project for designers_network, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (designers_network "designers_network.cpp")

# TODO: Add tests and install targets if needed.
