# CMakeList.txt : CMake project for expensive_calculator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (expensive_calculator "expensive_calculator.cpp" )

# TODO: Add tests and install targets if needed.
