# CMakeList.txt : CMake project for game_stats2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (game_stats2 "game_stats2.cpp" "game_stats2.h")

# TODO: Add tests and install targets if needed.
