# CMakeList.txt : CMake project for give_me_a_number, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (give_me_a_number "give_me_a_number.cpp" )

# TODO: Add tests and install targets if needed.
