# CMakeList.txt : CMake project for heap_data_member, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (heap_data_member "heap_data_member.cpp")

# TODO: Add tests and install targets if needed.
