# CMakeList.txt : CMake project for heros_inventory2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (heros_inventory2 "heros_inventory2.cpp" )

# TODO: Add tests and install targets if needed.
