# CMakeList.txt : CMake project for inventory_pointer, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (inventory_pointer "inventory_pointer.cpp")

# TODO: Add tests and install targets if needed.
