# CMakeList.txt : CMake project for polymorphic_bad_guy, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (polymorphic_bad_guy "polymorphic_bad_guy.cpp")

# TODO: Add tests and install targets if needed.
