# CMakeList.txt : CMake project for score_rater3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (score_rater3 "score_rater3.cpp" "score_rater3.h")

# TODO: Add tests and install targets if needed.
