# CMakeList.txt : CMake project for tic-tac-toe_board, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (tic-tac-toe_board "tic-tac-toe_board.cpp" )

# TODO: Add tests and install targets if needed.
